# Modulith

./: .gitmodules
code/: CMakeLists.txt  vcpkg.json
code/cmake/: FindPhysX.cmake  constants.cmake  functions.cmake  modulith_triplet.cmake  packages.cmake  setup.cmake
code/cmake/ports/imgui/: CMakeLists.txt  imgui-config.cmake.in  portfile.cmake
code/core/: CMakeLists.txt
code/core/engine/: CMakeLists.txt
code/core/engine/include/: PreCompiledHeader.h
code/core/engine/include/modules/: Module.h  ModuleContext.h
code/core/engine/src/: stb.cpp
code/core/engine/src/modules/: ModuleResources.cpp
code/core/runtime/: CMakeLists.txt
code/core/tests/: CMakeLists.txt
code/modules/: CMakeLists.txt
code/modules/core/: CMakeLists.txt
code/modules/core-tests/: CMakeLists.txt
code/modules/core/src/imgui/: ImGuiBuild.cpp  ImGuiWrapper.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
code/modules/core/src/opengl/: OpenGLContext.h
code/modules/core/src/windows/: WindowsWindow.cpp
code/modules/editor/: CMakeLists.txt
code/modules/game/: CMakeLists.txt
code/modules/mario/: CMakeLists.txt
code/modules/physics/: CMakeLists.txt
code/modules/physics/src/: InternalPhysXComponents.h
code/modules/renderer/: CMakeLists.txt
code/modules/shooter/: CMakeLists.txt
